// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast invalid location returns name for an anon fn in global scope as undefined 1`] = `
Object {
  "name": undefined,
  "offset": Object {
    "column": 0,
    "line": 44,
  },
  "signature": undefined,
}
`;

exports[`ast invalid location returns the scope name for global scope as undefined 1`] = `
Object {
  "name": undefined,
  "offset": Object {
    "column": 0,
    "line": 10,
  },
  "signature": undefined,
}
`;

exports[`ast valid location returns name for a nested anon fn as the parent func 1`] = `
Object {
  "name": "outer",
  "offset": Object {
    "column": undefined,
    "line": 22,
  },
  "signature": "outer",
}
`;

exports[`ast valid location returns name for a nested named fn 1`] = `
Object {
  "name": "inner",
  "offset": Object {
    "column": undefined,
    "line": 1,
  },
  "signature": "inner",
}
`;

exports[`ast valid location returns name for an anon fn with a named variable 1`] = `
Object {
  "name": "globalDeclaration",
  "offset": Object {
    "column": undefined,
    "line": 1,
  },
  "signature": "globalDeclaration",
}
`;

exports[`ast valid location returns the scope and offset 1`] = `
Object {
  "name": "math",
  "offset": Object {
    "column": undefined,
    "line": 5,
  },
  "signature": "math",
}
`;
